Add ARGB to VideoCapturePixelFormat enum

http://crrev.com/1cecc36 broke DevTools eyedropper tool.

Bug: 846379
Change-Id: I812b66c32192166b3c34582bf6b63407709ba784
Reviewed-on: https://chromium-review.googlesource.com/1072034
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561600}